# dhwiki

./: README.md
backend/: Dockerfile  deploy_seed.py  docker-entrypoint.sh  pyproject.toml  test.db
backend/app/: celery_app.py  main.py
backend/app/api/: aeo_plugins.py  analytics.py  api_keys.py  approval.py  auth.py  captcha.py  chat.py  crawl.py  departments.py  files.py  folders.py  internal.py  kb_permissions.py  knowledge_bases.py  open_api.py  permissions.py  roles.py  social.py  summary.py  users.py  watch_dirs.py  wiki.py
backend/app/core/: config.py  database.py  deps.py  security.py
backend/app/crud/: analytics.py  api_key.py  approval.py  conversation.py  crawl.py  department.py  file.py  file_summary.py  file_wiki.py  kb_permission.py  knowledge_base.py  permission.py  role.py  social.py  user.py
backend/app/models/: crawl.py  (+15 more)
backend/tests/: conftest.py  test_analytics_api.py  test_api_keys.py  test_approval_api.py  test_approval_crud.py  test_auth.py  test_chat_api.py  test_chunker.py  test_conversation_crud.py  test_crawl_api.py  test_departments.py  test_doc_processor.py  test_embedder.py  test_file_api.py  test_permission_accessible.py  test_permission_api.py  test_permission_crud.py  test_permission_service.py  test_phase6_models.py  test_process_document.py  test_rag_generator.py  test_rag_pipeline.py  test_rag_reranker.py  test_rag_retriever.py  test_roles.py  test_sync_permissions.py  test_users.py
backend/tools/: customer_A.json  gen_license.py  get_hardware_info.py  hardware_info_ZHANGSJ_2026-06-11.json  license.json  verify_license.py
(+100 files in other folders)
