[project]
name = "knowledge-base-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # Phase 1 已有
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "sqlalchemy==2.0.30",
    "alembic==1.13.1",
    "pymysql==1.1.0",
    "cryptography==42.0.7",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.9",
    "pydantic-settings==2.2.1",
    "celery[redis]==5.3.6",
    "httpx==0.27.0",
    "beautifulsoup4==4.14.3",
    # Phase 2 新增
    "unstructured[pdf,docx,xlsx,pptx]==0.13.7",
    "pymilvus>=2.4.0",
    "minio>=7.2.0",
    "watchdog>=4.0.0",
    "sentence-transformers>=3.0.0",
    "meilisearch>=0.31.0",
    "pillow>=10.0.0",
    "pymupdf>=1.24.0",
    "openpyxl>=3.1.0",
    "python-magic>=0.4.27",
    # Phase 3 新增
    "captcha>=0.6.0",
    # License 授权校验
    "ntplib>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "httpx==0.27.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

